// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table Tool > snapshots > should match snapshot for basic table 1`] = `1`;

exports[`Table Tool > snapshots > should match snapshot for basic table 2`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "columns": 3,
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 200,
  "id": "id33",
  "index": "a0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "rows": 2,
  "seed": 1,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "table",
  "updated": 1,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 300,
  "x": 100,
  "y": 100,
}
`;

exports[`Table Tool > snapshots > should match snapshot for styled table 1`] = `1`;

exports[`Table Tool > snapshots > should match snapshot for styled table 2`] = `
{
  "angle": 0,
  "backgroundColor": "#ffff00",
  "boundElements": null,
  "columns": 4,
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 300,
  "id": "id34",
  "index": "a0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 75,
  "roughness": 2,
  "roundness": {
    "type": 3,
  },
  "rows": 3,
  "seed": 1,
  "strokeColor": "#ff0000",
  "strokeStyle": "dashed",
  "strokeWidth": 3,
  "type": "table",
  "updated": 1,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 400,
  "x": 100,
  "y": 100,
}
`;

exports[`Table Tool > snapshots > should match snapshot for table with text 1`] = `3`;

exports[`Table Tool > snapshots > should match snapshot for table with text 2`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "text1",
      "type": "text",
    },
    {
      "id": "text2",
      "type": "text",
    },
  ],
  "columns": 2,
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 200,
  "id": "id35",
  "index": "a0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "rows": 2,
  "seed": 1,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "table",
  "updated": 1,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`Table Tool > snapshots > should match snapshot for table with text 3`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "id35",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": "text1",
  "index": "a1",
  "isDeleted": false,
  "lineHeight": "1.25000",
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "A1",
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "seed": 1,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "A1",
  "textAlign": "left",
  "type": "text",
  "updated": 1,
  "version": 2,
  "versionNonce": Any<Number>,
  "verticalAlign": "top",
  "width": 100,
  "x": 10,
  "y": 10,
}
`;

exports[`Table Tool > snapshots > should match snapshot for table with text 4`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "id35",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": "text2",
  "index": "a2",
  "isDeleted": false,
  "lineHeight": "1.25000",
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "B2",
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "seed": 1,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "B2",
  "textAlign": "left",
  "type": "text",
  "updated": 1,
  "version": 2,
  "versionNonce": Any<Number>,
  "verticalAlign": "top",
  "width": 100,
  "x": 110,
  "y": 110,
}
`;
